@@ -10,8 +10,10 @@ Templates/SearchForm.html
 <f:section name="content">
 	<form method="get" id="form_kesearch_pi1" name="form_kesearch_pi1"  action="{f:uri.page(pageUid: targetpage)}">
 		<f:comment><!-- Replace the URL with the speaking URL --></f:comment>
-		<f:if condition="{isEmptySearch} == FALSE">
-			<f:format.raw><script>history.replaceState(null,'','</f:format.raw><kesearch:link keepPiVars="1" uriOnly="1" /><f:format.raw>');</script></f:format.raw>
+		<f:if condition="{isEmptySearch} == FALSE ">
+			<f:if condition="{conf.searchWordParameter} == 'tx_kesearch_pi1[sword]'">
+				<f:format.raw><script>history.replaceState(null,'','</f:format.raw><kesearch:link keepPiVars="1" uriOnly="1" /><f:format.raw>');</script></f:format.raw>
+			</f:if>
 		</f:if>
 
 		<fieldset class="kesearch_searchbox">
@@ -26,7 +28,7 @@ Templates/SearchForm.html
 			</f:if>
 
 			<div class="kesearchbox">
-				<input type="search" id="ke_search_sword" name="tx_kesearch_pi1[sword]" value="{searchword -> f:format.raw()}" placeholder="{searchwordDefault}" {f:if(condition: '{extConf.allowEmptySearch} == 0', then: 'required')} minlength="{extConf.searchWordLength}" />
+				<input type="search" id="ke_search_sword" name="{conf.searchWordParameter}" value="{searchword -> f:format.raw()}" placeholder="{searchwordDefault}" {f:if(condition: '{extConf.allowEmptySearch} == 0', then: 'required')} minlength="{extConf.searchWordLength}" />
 				<div class="clearer">&nbsp;</div>
 			</div>
 
